--- a/public/style.css
+++ b/public/style.css
@@ -384,7 +384,8 @@ body {
 }
 
 @media (max-width: 767px) {
-  
+   
+   
     .logo img {
         margin-left: -30px;
 
@@ -437,4 +438,31 @@ body {
         font-size: 40px;
     }
 
+
+    
+}
+
+@media screen and (max-width: 451px) { 
+    .header header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        background-color: rgba(80, 81, 82, 0.625);
+        backdrop-filter: blur(10px);
+        padding: 0 10px;
+    }
+    .header {
+        position: fixed;
+        top: 0;
+        left: 0;
+        max-width:100vw;
+        z-index: 1000; 
+    }
+    
+    .logo img {
+        padding-top: 10PX;
+        height: 30px;
+        object-fit: cover;
+        margin-left: 0px;
+    }
 }
